@@ -138,11 +138,12 @@ def underline(level, s, extra=0):
    return _underline_levels[level] * (len(s) + extra)
 
 class DocumentationGenerator:
-   def __init__(self, root_path=".", test_mode=False, classes=[], plugins=None):
+   def __init__(self, root_path=".", test_mode=False, classes=[], plugins=None, sourceforge_logo=True):
       self.set_paths(root_path)
       self.test_mode = test_mode
       self.classes = classes
       self.plugins = plugins
+      self.sourceforge_logo = sourceforge_logo
 
    def set_paths(self, root):
       def check_path(path):
@@ -226,11 +227,15 @@ class DocumentationGenerator:
              os.stat(filename)[ST_MTIME] > os.stat(output_file)[ST_MTIME]):
             print "  Generating " + rootname
             lines = fd.readlines()
+            if self.sourceforge_logo:
+               footer = '.. footer:: :raw-html:`<a href="http://sourceforge.net/projects/gamera"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=99328&type=13" width="120" height="30" border="0" alt="Get Gamera at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>`\n\n'
+            else:
+               footer = "\n"
             lines = (lines[:3] + 
                      ["\n", u"**Last modified**: %s\n\n" % mtime, 
                       ".. contents::\n\n", 
                       ".. role:: raw-html(raw)\n   :format: html\n",
-                      '.. footer:: :raw-html:`<a href="http://sourceforge.net/projects/gamera"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=99328&type=13" width="120" height="30" border="0" alt="Get Gamera at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>`\n\n'
+                      footer
                       ] + 
                      lines[3:])
             fd = cStringIO.StringIO((u''.join(lines)).encode("utf-8"))
@@ -628,7 +633,7 @@ def print_usage():
     print "   will be used.)"
     print 
    
-def gendoc(classes=[], plugins=None):
+def gendoc(classes=[], plugins=None, sourceforge_logo=True):
    print_usage()
    opts, args = getopt.getopt(sys.argv[1:], "d:t")
    root = '.'
@@ -639,7 +644,7 @@ def gendoc(classes=[], plugins=None):
       elif flag == "-t":
          test_mode = True
    try:
-      docgen = DocumentationGenerator(root, test_mode, classes=classes, plugins=plugins)
+      docgen = DocumentationGenerator(root, test_mode, classes=classes, plugins=plugins, sourceforge_logo=sourceforge_logo)
    except Exception, e:
       print "Documentation generation failed with the following exception:"
       print e
