@@ -1,6 +1,9 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - sourceforge logo can optionally be suppressed in gendoc by
+   passing sourceforge_logo=False to gendoc.gendoc
+
  - draw_text works again (thanks to S\oren Bjerregaard Vrist)
 
  - new page segmentation plugin bbox_merging
